﻿Version 0.14 - compatible with A16.4 (b8)



Version 0.13 - compatible with A16.4 (b8)

- Add runtime patching system and command "dj-patch"
- Added patch for zombie corpse item dupe exploit; activate with: dj-patch corpse-dupe on
- Removed command aliases "js" and "lua" to leave only the "-test" ones.


Version 0.12 - compatible with A16.3 (b12) and A16.4 (b8)

- Added dj-eac-whitelist command, which allows to exempt selected players from EAC checks and use modded clients on EAC-enabled servers
- Fixed typo in js-sleepers command help


Version 0.11 - compatible ONLY with A16.3 (b12)

- Fixed bug that caused a JS exception when using console.log
- Improved js-minibike script to also rotate minibike in direction of player for easy take-off
- Fixed js-minibike script to not work properly when Steam Family Sharing is active
- Added js-variables script to show how to access and iterate basic game objects


Version 0.10 - compatible ONLY with A16.3 (b12)

- Fixed error message when dj-import is called without parameter
- Added function "importAssembly(assemblyName)" to JavaScript engine to allow importing all types of any .Net assembly
- Added global variables "sender" and "player" to scripting engines (lua and js)
- Added example script js-sleepers.js to show import of assemblies and access to objects
- Added background monitoring of added/removed/changed scripts with automatic reloading of script commands without server restart
- Added new js-minibike example script that allows players to teleport their minibike back to them


Version 0.9 - compatible ONLY with A16.3 (b12)

- Updated compatibility to 7DTD A16.3 (b12)
- Replaced dj-power with dj-repair to add other fix tasks in the future.
- Added repair task to restart stopped saving of power and vehicle data (also fixed in A16.3 b7)
- Added repair task to reset locked biome respawn
- Fixed bug that would trigger automatic fixing of power chunks also on unrelated errors