@@ -1,5 +1,6 @@
 ﻿Version 0.14 - compatible with A16.4 (b8)
 
+- Added repair task 't' to fix bugged trees that have zero HP without falling and give endless wood
 
 
 Version 0.13 - compatible with A16.4 (b8)
